--- a/html/第三章  函数式根基/函数调用模式与方法调用模式区别.html
+++ b/html/第三章  函数式根基/函数调用模式与方法调用模式区别.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-<script src="../js/assert.js"></script>
+<script src="../../js/assert.js"></script>
 <script>
     //assert(value,desc)
     //value为true,class值为'pass',否则为'fail'
