--- a/html/第三章  函数式根基/构造器调用模式.html
+++ b/html/第三章  函数式根基/构造器调用模式.html
@@ -14,7 +14,7 @@
     <li>这个对象被传递给这个构造器作为this参数，也就是说这个对象是这个构造器的上下文</li>
     <li>如果没有显性的return，这个新的对象则会被隐式的return，并成为这个构造器的值</li>
 </ol>
-<script src="../js/assert.js"></script>
+<script src="../../js/assert.js"></script>
 <script>
 
 </script>
